<resources>
    <string name="app_name">Net Peyk</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYWhtYWRhbmRyb2lkIiwiYSI6ImNrM3I3cnk2bTA3YXMzY3BzdTkxMm95NmkifQ.mhhJlbneWCD3vKjZas28fg</string>
    <string name="user_location_permission_explanation">برای فعال شدن برنامه لطفا gps خود را فعال کنید</string>
    <string name="user_location_permission_not_granted">برنامه اجازه دسترسی به gps را ندارد</string>
    <string name="tap_on_marker_instruction">tap_on_marker_instruction</string>
    <string name="new_location">lat %1s  long  %2s</string>
    <string name="txt_code">کد ملی</string>
    <string name="txt_pass">پسورد</string>
    <string name="txt_input">ورود</string>
    <string name="txt_person_name">نام ونام خانوادگی</string>
    <string name="txt_person_mobile">شماره همراه</string>
    <string name="btn_apply">ثبت</string>
    <string name="message_expire">برنامه منقضی شده است</string>
    <string name="message_not_connect">لطفا از اتصال به اینترنت مطمئن شوید</string>
    <string name="txt_identifyCode">کد شناسائی</string>
    <string name="message_not_active">نام کاربری شما غیرفعال است</string>
    <string name="sw_state_active">فعال</string>
    <string name="sw_state_deActive">غیر فعال</string>
    <string name="btn_edit">ویرایش</string>
    <string name="sw_admin">مدیر</string>
    <string name="sw_user">عادی</string>
    <string name="txt_person_list_empty">لیست اعضا خالی میباشد</string>
    <string name="message_mistake_code_pass">نام کاربری یا کلمه عبور اشتباه میباشد</string>
    <string name="message_edit_person_info">مشخصات ویرایش شد</string>
    <string name="message_not_edit_person_info">عملیات ویرایش با خطا مواجه شد</string>
    <string name="message_insert_person">کاربر جدید اضافه شد</string>
    <string name="message_not_insert_person">عملیات با خطا مواجه شد</string>
    <string name="message_repeat_nationalCode">کاربر با این کد ملی موجود میباشد</string>
    <string name="txt_map">نقشه</string>
    <string name="txt_main_page">صفحه اصلی</string>
    <string name="txt_drivers">راننده ها</string>
    <string name="txt_service">سرویس ها</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_profile">پروفایل</string>

    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="txt_person">اشخاص</string>
    <string name="txt_person_nationalCode">کد ملی</string>
    <string name="txt_person_identifyCode">کد شناسائی</string>
    <string name="txt_person_info">مشخصات شما:</string>
    <string name="driver_state_active">راننده فعال میباشد</string>
    <string name="driver_state_deActive">راننده غیر فعال میباشد</string>
    <string name="message_full_field">لطفا فیلد را پر کنید</string>
    <string name="txt_service_list_empty">سرویسی وجود ندارد</string>
    <string name="title_activity_admin_panel">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_sender">فرستنده</string>
    <string name="txt_senderMobile">شماره همراه فرستنده</string>
    <string name="txt_senderAddress">آدرس فرستنده</string>
    <string name="txt_receiver">گیرنده</string>
    <string name="txt_receiverMobile">شماره همراه گیرنده</string>
    <string name="txt_receiverAddress">آدرس گیرنده</string>
    <string name="txt_driver">راننده</string>
    <string name="sw_state">وضعیت</string>
    <string name="txt_packet">مرسوله</string>
    <string name="txt_rentMount">کرایه</string>
    <string name="txt_state">وضعیت</string>
    <string name="txt_toman">تومان</string>
    <string name="message_not_manager">نام کاربری شما به عنوان مدیر نمیباشد</string>
    <string name="snaking_directions_activity_error">direction_error</string>
    <string name="position_textview">\"State-label\" layer\'s anchor position: %1$s \n%2$s</string>
</resources>