<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ui.activities.InsertPersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpt_identifyCode_insert_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/txt_identifyCode"
            android:padding="2dp">

            <EditText
                android:id="@+id/edt_identifyCode_insert_person"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textDirection="rtl" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpt_name_insert_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/txt_person_name"
            android:padding="2dp">

            <EditText
                android:id="@+id/edt_name_insert_person"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="rtl" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpt_mobile_insert_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/txt_person_mobile"
            android:padding="2dp">

            <EditText
                android:id="@+id/edt_mobile_insert_person"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textDirection="rtl" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpt_nationalCode_insert_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/txt_code"
            android:padding="2dp">

            <EditText
                android:id="@+id/edt_nationalCode_insert_person"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textDirection="rtl" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swtch_state_insert_person"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layoutDirection="rtl"
                android:text="@string/sw_state_deActive"
                android:textSize="@dimen/size_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swtch_admin_insert_person"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="5dp"
                android:layoutDirection="rtl"
                android:text="@string/sw_user"
                android:textSize="@dimen/size_text" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_register_insert_person"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/btn_click"
            android:text="@string/btn_apply" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>