<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.InsertServiceActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lin_layout_service_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_driver_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_driver"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_driver_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_sender_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_sender"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_sender_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_senderMobile_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_senderMobile"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_senderMobile_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_senderAddress_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_senderAddress"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_senderAddress_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_receiver_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_receiver"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_receiver_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_receiverMobile_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_receiverMobile"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_receiverMobile_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_receiverAddress_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_receiverAddress"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_receiverAddress_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_packet_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_packet"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_packet_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpt_rent_insert_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_rentMount"
                android:padding="2dp">

                <EditText
                    android:id="@+id/edt_rent_insert_service"
                    style="@style/text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textDirection="rtl" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_confirm_insert_service"
                style="@style/btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/btn_click"
                android:text="@string/btn_apply" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>