<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ui.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_logo_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo1" />

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="2"
            android:textColor="@color/color_text"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/edt_code_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/tv_title_login"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_border"
            android:hint="@string/txt_code"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@style/text_style"/>

        <EditText
            android:id="@+id/edt_pass_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/edt_code_login"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_border"
            android:hint="@string/txt_pass"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@style/text_style"/>

        <Button
            android:id="@+id/btn_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_pass_login"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_click"
            android:text="@string/txt_input"
            style="@style/btn_style" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>